turtleart.stairs.Stairs.scala.error
Erreur de compilation :
Stairs:3: error: '(' expected but identifier found.
  while n>=0 {
        ^Stairs:8: error: illegal start of simple expression
} 
^